<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9FAFF"
    tools:context=".MainActivity">

    <!-- Main content -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:fontFamily="cursive"
            android:textStyle="bold"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:layout_gravity="center_horizontal" />

        <!-- GridLayout for Buttons -->
        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:columnCount="2"
            app:layout_constraintTop_toBottomOf="@id/appName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:rowCount="2">

            <!-- Mood Tracking Button -->
            <LinearLayout
                android:id="@+id/moodTrackingLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="4dp"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_row="0"
                app:layout_rowWeight="1">

                <ImageButton
                    android:id="@+id/moodTrackingButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/xml_button_selector"
                    android:contentDescription="@string/mood_tracking"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_main_mood_tracking_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/mood_tracking"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- Stress Levels Button -->
            <LinearLayout
                android:id="@+id/stressLevelsLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="4dp"
                app:layout_row="0"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                android:layout_margin="4dp">

                <ImageButton
                    android:id="@+id/stressLevelsButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/icon_main_stress_levels_icon"
                    android:background="@drawable/xml_button_selector"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/stress_levels" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stress_levels"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="4dp" />
            </LinearLayout>

            <!-- Sleep Patterns Button -->
            <LinearLayout
                android:id="@+id/sleepPatternsLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="4dp"
                app:layout_row="1"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                android:layout_margin="4dp">

                <ImageButton
                    android:id="@+id/sleepPatternsButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/icon_main_sleep_patterns_icon"
                    android:background="@drawable/xml_button_selector"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/sleep_patterns" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sleep_patterns"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="4dp" />
            </LinearLayout>

            <!-- Data Visualization Button -->
            <LinearLayout
                android:id="@+id/dataVisualizationLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="4dp"
                app:layout_row="1"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                android:layout_margin="4dp">

                <ImageButton
                    android:id="@+id/dataVisualizationButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/icon_main_data_visualization_icon"
                    android:background="@drawable/xml_button_selector"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/data_visualization" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_visualization"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="4dp" />
            </LinearLayout>
        </androidx.gridlayout.widget.GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_openai2"
        android:contentDescription="@string/add"
        app:layout_anchorGravity="bottom|end"
        app:backgroundTint="@color/white"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
